﻿TODO Still to add: g5109b, lostv10, rokv100

Feb 1, 2013
    - Started work on a configuration program
	- Removed RLoginMode configuration variable.  It is now assumed to be classic mode unless otherwise specified by the incoming connection.
	  This also means you can mix classic and web mode on one server since it is specified per connection.
	- Added TimeFormatLog and TimeFormatUI configuration variables, which allow you to customize the way dates/times
	  are displayed in the GUI and Console programs, and stored in the log file
	- Added IP_BANNED.ANS that gets displayed when an IP matches the banned IP filter

January 31, 2013
	- Add colour coding to certain message types (error, exception, warning, debug)

January 29, 2013
	- Add correct version to DOOR32.SYS file

January 21, 2013
	- Fixed a time formatting issue, which was causing times to display the current month number instead of the current minute number in some places!

January 15, 2013
	- DOS doors will now launch in a command shell on Windows, which should fix the "Out of environment space" error
	  that was occuring when new variables were created via SET, and should also fix the problem with %DATE% and %TIME%
	  being blank.

January 11, 2013
	- Implemented new WARNING level to complement ERROR level.  Will try to migrate some of the messages currently being reported as errors to be reported
	  as warnings instead (if it makes more sense to report them that way of course).

January 9, 2013
    - Connections that launch RUNBBS.INI will now update the top 3 lines of the console and gui wfc
	- Changed LocalOutput=[true|false] to WindowStyle=[Hidden|Minimized|Normal|Maximized] in the door ini files
	  The old style was equivalent to true=Minimized, false=Hidden, so with this change you have more control and can use Normal or Maximized too
	- Added the ability to setup a list of banned ips -- see config\banned-ips.txt for more information

January 7, 2013